syntax = "proto3";

option csharp_namespace = "DataAcquisitionSystemModbusProtocol.GrpcProtos";

package GrpcProtos;

import "google/protobuf/wrappers.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";
import "common.proto";
import "google/protobuf/timestamp.proto";
//import "sample.proto";

service AnalogicVariable
{
	rpc CreateAnalogicVariable (CreateAnalogicVariableRequest) returns (AnalogicVariableDTO);
	rpc GetAnalogicVariable (GetRequest) returns (NullableAnalogicVariableDTO);
	rpc GetAllAnalogicVariables (google.protobuf.Empty) returns (AnalogicVariables);
	rpc UpdateAnalogicVariable (AnalogicVariableDTO) returns (google.protobuf.Empty);
	rpc DeleteAnalogicVariable (DeleteRequest) returns (google.protobuf.Empty);
}

message AnalogicVariableDTO
{
	string id = 1;
	string name = 2;
	VariableType variableType = 3;
	string code = 4;
	google.protobuf.Timestamp samplingPeriod = 5;
	string modbusProtocolDirection = 6;
	//Samples samples = 6;
}

message AnalogicVariables 
{
	repeated AnalogicVariableDTO items = 1;
}

message NullableAnalogicVariableDTO
{
	oneof kind
	{
		google.protobuf.NullValue null = 1;
		AnalogicVariableDTO analogicVariable = 2;
	}
}


message CreateAnalogicVariableRequest
{
	string name = 1;
	VariableType variableType = 2;
	string code = 3;
}


